--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "consume-more-stuff",
+  "version": "1.0.0",
+  "description": "> A custom CMS for personal product sale",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/levibrooke/consume-more-stuff.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/levibrooke/consume-more-stuff/issues"
+  },
+  "homepage": "https://github.com/levibrooke/consume-more-stuff#readme",
   "dependencies": {
+    "bookshelf": "^0.12.1",
+    "knex": "^0.14.4",
+    "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
