--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@
 .env.test.local
 .env.production.local
 
+
+# database config file
+server/db/config.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
 package-lock.json
