Setup user authentication (#7)
* Added express to dependencies

* Added packages to dependencies

* Added user registration, login, logout, authentication to server.js, addded isAuthenticated.js to handle auth checks

* Adjusted post on /register

* fixed error handling for incorrect username

--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   },
   "homepage": "https://github.com/levibrooke/consume-more-stuff#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bookshelf": "^0.12.1",
+    "connect-redis": "^3.3.3",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "knex": "^0.14.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
