--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
