--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "homepage": "http://c20.cruds.consumemorestuff.com"
 }
