--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start-js": "react-scripts start",
