--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "knex": "^0.14.4",
+    "multer": "^1.3.0",
     "nodemon": "^1.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -32,6 +33,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
