--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "homepage": "https://github.com/levibrooke/consume-more-stuff#readme",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-brands": "^5.0.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
