--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/levibrooke/consume-more-stuff/issues"
   },
-  "homepage": "https://github.com/levibrooke/consume-more-stuff#readme",
+  "homepage": "http://c20.cruds.consumemorestuff.com",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.8",
