--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.6",
     "knex": "^0.14.4",
     "multer": "^1.3.0",
+    "node-schedule": "^1.3.0",
     "nodemon": "^1.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
